--- a/src/webapp/partials/personne-detail.html
+++ b/src/webapp/partials/personne-detail.html
@@ -1,11 +1,11 @@
 <button ng-click="go('');">Retour</button>
 
 Personne <span>{{personneId}}</span>
-
 <div ng-if="modif">
-	<button ng-click="save(); reload();">Sauvergarder</button><br/>
+	<button ng-click="save(); reload();">Sauvegarder</button><br/>
 	Nom:<input ng-model="personne.nom"><br/>
-	Prenom:<input ng-model="personne.prenom"/>
+	Prenom:<input ng-model="personne.prenom"/><br/>
+	<button ng-click="remove();">Supprimer</button>
 </div>
 
 
