--- a/src/webapp/partials/promotion-detail.html
+++ b/src/webapp/partials/promotion-detail.html
@@ -1,17 +1,17 @@
-<h1 class="page-header">Formation</h1>
+<h1 class="page-header">Promotion</h1>
 
 
 
 <div ng-if="modif">
 
-	<button type="button" class="btn btn-default" ng-click="go('/formations');">Retour</button>
+	<button type="button" class="btn btn-default" ng-click="go('/promotions');">Retour</button>
 
 	<form class="form-horizontal" role="form">
 
 		<div class="form-group">
 			<label for="nom" class="col-sm-2 control-label">Nom :</label>
 			<div class="col-sm-10">
-				<input type="text" class="form-control" ng-model="formation.nom"><br/>
+				<input type="text" class="form-control" ng-model="promotion.nom"><br/>
 			</div>
 		</div>
 
@@ -28,7 +28,7 @@
 
 <div ng-if="!modif">
 
-	<button type="button" class="btn btn-default" ng-click="go('/formations');">Retour</button>
+	<button type="button" class="btn btn-default" ng-click="go('/promotions');">Retour</button>
 	<button type="button" class="btn btn-primary" ng-click="edit();">Modifier</button><br/>
-	<h1>{{formation.nom}}</h1>
+	<h1>{{promotion.nom}}</h1>
 </div>
