Correction et ajout directive pour confirmation de suppression

--- a/src/webapp/partials/formation-detail.html
+++ b/src/webapp/partials/formation-detail.html
@@ -5,7 +5,9 @@
 <div ng-if="modif">
 	<button ng-click="save(); reload();">Sauvegarder</button><br/>
 	Nom:<input ng-model="formation.nom"><br/>
-	<button ng-click="remove();">Supprimer</button>
+	<button ng-Confirm-Click="Voulez-vous vraiment supprimer cette formation ?"
+	 ng-Confirm-Click-Action="remove();">Supprimer</button>
+	
 </div>
 
 
