--- a/src/webapp/partials/personne-creation.html
+++ b/src/webapp/partials/personne-creation.html
@@ -23,6 +23,7 @@
 			<button type="button" class="btn btn-primary" ng-click="save();">Ajouter</button><br/>
 		</div>
 	</div>
-</div>
+	
+</form>
 
 
