--- a/src/webapp/partials/promotion-detail.html
+++ b/src/webapp/partials/promotion-detail.html
@@ -17,7 +17,7 @@
 
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
-				<button type="button" class="btn btn-default" ng-click="remove();">Supprimer</button>
+				<button type="button" class="btn btn-default" ng-Confirm-Click="Voulez-vous vraiment supprimer cette formation ?" ng-Confirm-Click-Action="remove();">Supprimer</button>
 				<button type="button" class="btn btn-primary" ng-click="save(); reload();">Modifier</button><br/>
 			</div>
 		</div>
