--- a/src/webapp/partials/stats.html
+++ b/src/webapp/partials/stats.html
@@ -1,130 +1,74 @@
 
-	<div style="margin-left: 50px; margin-top: 60px;">
 
-		<div class="btn-group">
+<!-- Nav tabs -->
+<ul class="nav nav-tabs" style="margin-top: 50px;">
+	<li class="active"><a href="#uv" data-toggle="tab">Statistiques
+			UV et cours</a></li>
+	<li><a href="#enseignants" data-toggle="tab">Statistiques
+			enseignants</a></li>
+</ul>
 
-			<button ng-click="changeMainChart('UV')" type="button" class="btn btn-default">Répartition UV par nombre d'heures</button>
+<!-- Tab panes -->
+<div class="tab-content">
+	<div class="tab-pane active" id="uv">
+		<div style="margin-left: 50px;">
+			<div class="btn-group-vertical"
+				style="float: left; margin-top: 60px;">
+				<button ng-click="changePie('A1S')" type="button"
+					class="btn btn-default">A1S</button>
+				<button ng-click="changePie('A2S')" type="button"
+					class="btn btn-default">A2S</button>
+				<button ng-click="changePie('A2S2')" type="button"
+					class="btn btn-default">A2S2</button>
+			</div>
 
+			<nvd3-pie-chart data="datas" id="exampleId"
+				margin="{left:0,top:30,bottom:0,right:0}" width="400" height="300"
+				x="xFunction()" y="yFunction()" showLabels="false"
+				pieLabelsOutside="false" showValues="false" showLegend=false
+				tooltips="true" tooltipcontent="toolTipContentFunction()"
+				noData="Pas de données"> <svg
+				style="height: 350px; width: 500px;"></svg> </nvd3-pie-chart>
 		</div>
 
-		<nvd3-multi-bar-horizontal-chart
+		<div style="margin-left: 50px; margin-top: 60px;">
+			<div class="btn-group">
+				<button ng-click="changeMainChart('UV')" type="button"
+					class="btn btn-default">Répartition UV par nombre d'heures</button>
+			</div>
 
-			    	data="mainDatas"
+			<nvd3-multi-bar-horizontal-chart data="mainDatas" id="mainChart"
+				margin="{left:400,top:30,bottom:100,right:30}" height="400"
+				width="800" tooltips="true" showXAxis="true" showYAxis="true"
+				showValues="true" showLegend="true" delay="2400" interactive="true"
+				noData="Pas de données"> <svg
+				style="height: 350px;"></svg> </nvd3-multi-bar-horizontal-chart>
 
-		            id="mainChart"
-
-					margin="{left:400,top:30,bottom:100,right:30}" 
-
-		            height="400"
-
-		            width="800"
-
-		            tooltips="true"
-
-		            showXAxis="true"
-
-		            showYAxis="true"
-
-		            showValues="true"
-
-		            showLegend="true"
-
-		            delay="2400"
-
-		            interactive="true"
-
-		            noData="Pas de données">
-
-	        	<svg style="height:350px;"></svg>
-
-	    	</nvd3-multi-bar-horizontal-chart>
-
+		</div>
 	</div>
-
+	<div class="tab-pane" id="enseignants">
 		<div style="margin-left: 50px;">
+			<div class="btn-group-vertical"
+				style="float: left; margin-top: 60px;">
+				<button ng-click="changeBar('ens1')" type="button"
+					class="btn btn-default">Enseignant 1</button>
+				<button ng-click="changeBar('ens2')" type="button"
+					class="btn btn-default">Enseignant 2</button>
+			</div>
 
-			<div class="btn-group-vertical" style="float: left; margin-top: 60px;">
+			<nvd3-discrete-bar-chart data="datasBar" id="exampleId2"
+				margin="{left:50,top:30,bottom:100,right:30}" width="500"
+				height="400" tooltips="true" showXAxis="true" showYAxis="true"
+				showValues="true" noData="Pas de données">
 
-		 		<button ng-click="changePie('A1S')" type="button" class="btn btn-default">A1S</button>
+			<svg style="height: 350px; width: 500px;"></svg> </nvd3-discrete-bar-chart>
+		</div>
+	</div>
+</div>
 
-		 		<button ng-click="changePie('A2S')" type="button" class="btn btn-default">A2S</button>
-
-		 		<button ng-click="changePie('A2S2')" type="button" class="btn btn-default">A2S2</button>
-
-	  		</div>
-
-			
-
-			<nvd3-pie-chart 
-
-					data="datas" 
-
-					id="exampleId"
-
-					margin="{left:0,top:30,bottom:0,right:0}" 
-
-		       		width="400"
-
-		        	height="300"
-
-					x="xFunction()"
-
-					y="yFunction()" 
-
-					showLabels="false" 
-
-					pieLabelsOutside="false"
-
-					showValues="false" 
-
-					showLegend=false
-
-					tooltips="true"
-
-		        	tooltipcontent="toolTipContentFunction()"   
-
-		        	noData="Pas de données">
-
-				<svg style="height:350px; width: 500px;"></svg> </nvd3-pie-chart></div>
-
-		
-
-		<div>
-
-		<div style="margin-left: 50px;">
-
-			<div class="btn-group-vertical" style="float: left; margin-top: 60px;">
-
-		 		<button ng-click="changeBar('ens1')" type="button" class="btn btn-default">Enseignant 1</button>
-
-		 		<button ng-click="changeBar('ens2')" type="button" class="btn btn-default">Enseignant 2</button>
-
-	  		</div>
-
-			<nvd3-discrete-bar-chart
-
-			    	data="datasBar"
-
-		            id="exampleId2"
-
-					margin="{left:50,top:30,bottom:100,right:30}" 
-
-		            width="500"
-
-		            height="400"
-
-		            tooltips="true"
-
-		            showXAxis="true"
-
-		            showYAxis="true"
-
-		            showValues="true"
-
-		            noData="Pas de données">
-
-	        	<svg style="height:350px; width: 500px;"></svg>
-
-	    	</nvd3-discrete-bar-chart></div>
-
-    	</div>
+<script type="text/javascript">
+	$('.nav-tabs a').click(function(e) {
+		e.preventDefault()
+		$(this).tab('show')
+	})
+</script>
