--- a/src/webapp/partials/uv-list.html
+++ b/src/webapp/partials/uv-list.html
@@ -3,7 +3,9 @@
 	<div class="row">
 		<div class="col-md-2">
 			<!--Sidebar content-->
-			<p> Affichage {{uvs.length + '/' + uvsCount}},  tri par "{{orderProp}}"</p>
+			<p>Affichage de {{(uvs.length?uvs.length:'0') + '/' + uvsCount}} UV(s)<p>
+			<p>{{'UV(s): ' + (uvs.length?(start+1):'0') + ' - ' + (start+uvs.length)}} 
+			<p>Tri par "{{orderProp}}"</p>
 			<p>Search: <input ng-model="query"></p>
 			<p>Sort by: 
 				<select ng-model="orderProp">
@@ -12,7 +14,7 @@
 				</select>
 			</p>
 			<p>R&eacute;sultats par page:
-				<select ng-model="limit" ng-change="loadUv()">
+				<select ng-model="limit" ng-change="setUvs()">
 					<option value="1">1</option>
 					<option value="2">2</option>
 					<option value="5">5</option>
@@ -27,9 +29,14 @@
 		<div class="col-md-10">
 			<ul class="">
 				<li ng-repeat="uv in uvs | filter:query | orderBy:orderProp" class="thumbnail">
-					<a href="#/uvs/{{uv.id}}">{{getPromotion(uv.Promotion_id).nom + ' - ' + uv.nom}}</a>
+					<a href="#/uvs/{{uv.id}}">{{getFormation(uv).nom + ' - ' + getPromotion(uv).nom + ' - ' + uv.nom}}</a>
 				</li>
 			</ul>
+			<div>
+				<a href ng-if="start>0" ng-click="precedents()"> &lt; Pr&eacute;c&eacute;dent(s) </a>
+				<b ng-if="(start>0) && ((start+uvs.length)<uvsCount)"> | </b>
+				<a href ng-if="(start+uvs.length)<uvsCount" ng-click="suivants()"> Suivant(s) &gt;</a>
+			</div>
 		</div>
 	</div>
 </div>
