--- a/src/webapp/partials/stats.html
+++ b/src/webapp/partials/stats.html
@@ -65,7 +65,10 @@
 		</div>
 	</div>
 	<div class="tab-pane" id="enseignants">
-		<div style="margin-left: 50px;">
+		<div style="margin-left: 50px; margin-top: 30px;">
+		
+			<p style="font-size: 18px;">Repartition des modules par enseignants en heures :</p>
+
 			<div class="btn-group-vertical"
 				style="float: left; margin-top: 60px;">
 				<button ng-click="changeBar('ens1')" type="button"
