--- a/src/webapp/partials/formation-creation.html
+++ b/src/webapp/partials/formation-creation.html
@@ -6,13 +6,13 @@
 	<div class="form-group">
 		<label for="nom" class="col-sm-2 control-label">Nom :</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" ng-model="formation.nom"><br/>
+			<input type="text" class="form-control" ng-model="data.nom"><br/>
 		</div>
 	</div>
 
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
-			<button type="button" class="btn btn-default" ng-click="go('formations');">Retour</button>
+			<button type="button" class="btn btn-default" ng-click="goBack();">Retour</button>
 			<button type="button" class="btn btn-primary" ng-click="save();">Ajouter</button><br/>
 		</div>
 	</div>
