--- a/src/webapp/partials/personne-detail.html
+++ b/src/webapp/partials/personne-detail.html
@@ -1,19 +1,38 @@
 <h1 class="page-header">Personne</h1>
-<button ng-click="go('');">Retour</button>
 
-Personne <span>{{personneId}}</span>
-<div ng-if="modif">
-	<button ng-click="save(); reload();">Sauvegarder</button><br/>
-	Nom:<input ng-model="personne.nom"><br/>
-	Prenom:<input ng-model="personne.prenom"/><br/>
+
+<div ng-if="editing">
+
+	<button type="button" class="btn btn-default" ng-click="goBack();">Retour</button>
+
+	<form class="form-horizontal" role="form">
+
+		<div class="form-group">
+			<label for="nom" class="col-sm-2 control-label">Nom :</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" ng-model="data.nom"><br/>
+			</div>
+			<label for="prenom" class="col-sm-2 control-label">Pr&eacute;nom :</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" ng-model="data.prenom"><br/>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+				<button type="button" class="btn btn-default" ng-Confirm-Click="Voulez-vous vraiment supprimer cette personne ?" ng-Confirm-Click-Action="remove();">Supprimer</button>
+				<button type="button" class="btn btn-primary" ng-click="save();">Modifier</button><br/>
+			</div>
+		</div>
+	</form>
 	
-	<button ng-Confirm-Click="Voulez-vous vraiment supprimer cette personne ?" ng-Confirm-Click-Action="remove();">Supprimer</button>
-
 </div>
 
 
-<div ng-if="!modif">
-	<button ng-click="edit();">Modifier</button><br/>
-	<h1>{{personne.prenom + ' ' + personne.nom}}</h1>
-</div>
+<div ng-if="!editing">
 
+	<button type="button" class="btn btn-default" ng-click="goBack();">Retour</button>
+	<button type="button" class="btn btn-primary" ng-click="edit();">Modifier</button><br/>
+	<h1>{{data.prenom + ' ' + data.nom}}</h1>
+	
+</div>
