--- a/src/webapp/partials/promotion-creation.html
+++ b/src/webapp/partials/promotion-creation.html
@@ -6,7 +6,7 @@
 	<div class="form-group">
 		<label for="nom" class="col-sm-2 control-label">Nom :</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" ng-model="promotion.nom"><br/>
+			<input type="text" class="form-control" ng-model="data.nom"><br/>
 		</div>
 	</div>
 
@@ -14,7 +14,7 @@
 		
 		<label for="nom" class="col-sm-2 control-label">Formation :</label>
 		<div class="col-sm-10">
-		<select class="form-control" ng-model="promotion.Formation_id">
+		<select class="form-control" ng-model="data.Formation_id">
 			<option ng-repeat="formation in formations | orderBy:orderProp" value="{{formation.id}}">{{formation.nom}}</option>
 		</select>
 		</div>
@@ -23,7 +23,7 @@
 
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
-			<button type="button" class="btn btn-default" ng-click="go('promotions');">Retour</button>
+			<button type="button" class="btn btn-default" ng-click="goBack();">Retour</button>
 			<button type="button" class="btn btn-primary" ng-click="save();">Ajouter</button><br/>
 		</div>
 	</div>
