--- a/src/webapp/partials/uv-creation.html
+++ b/src/webapp/partials/uv-creation.html
@@ -6,7 +6,7 @@
 	<div class="form-group">
 		<label for="nom" class="col-sm-2 control-label">Nom :</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" ng-model="uv.nom"><br/>
+			<input type="text" class="form-control" ng-model="data.nom"><br/>
 		</div>
 	</div>
 
@@ -14,8 +14,8 @@
 		
 		<label for="nom" class="col-sm-2 control-label">Promotion :</label>
 		<div class="col-sm-10">
-		<select class="form-control" ng-model="uv.Promotion_id">
-			<option ng-repeat="promotion in promotions | orderBy:orderProp" value="{{promotion.id}}">{{promotion.nom}}</option>
+		<select class="form-control" ng-model="data.Promotion_id">
+			<option ng-repeat="promotion in promotions | orderBy:orderProp" value="{{promotion.id}}">{{getFormation(promotion).nom + ' - ' + promotion.nom}}</option>
 		</select>
 		</div>
 
@@ -23,7 +23,7 @@
 
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
-			<button type="button" class="btn btn-default" ng-click="go('uvs');">Retour</button>
+			<button type="button" class="btn btn-default" ng-click="goBack();">Retour</button>
 			<button type="button" class="btn btn-primary" ng-click="save();">Ajouter</button><br/>
 		</div>
 	</div>
